--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@ Have fun :)
     </title>
     <style>
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
-
+        /* Style the popup background */
+        .leaflet-popup-content-wrapper {
+            background-color: #333; /* Dark background */
+        }
+        
+        /* Style the popup tip */
+        .leaflet-popup-tip {
+            background-color: #333;
+        }
+        
         .enable-transitions {
             transition: background-color 0.3s, color 0.3s;
         }
