--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@ Have fun :)
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
         /* Style the popup background */
         .leaflet-popup-content-wrapper {
-            background-color: #333; /* Dark background */
+            background: #333; /* Dark background */
         }
         
         /* Style the popup tip */
         .leaflet-popup-tip {
-            background-color: #333;
+            background: #333;
         }
         
         .enable-transitions {
