--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@ Have fun :)
             .resourcesContainer {
                 display : inline;
             }
+
+                    
+            .somethingCoolContainer {
+                display : inline;
+            }
         }
         /* bonfire.css a little thing GPT and I cooked up to make transitioning between dark and light mode more delightful. */
         .bonfire {
