--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ Have fun :)
     <style>
         @import url("https://fonts.googleapis.com/css?family=Montserrat");
         /* Style the popup background */
-        .leaflet-popup-content-wrapper {
-            background: #333; /* Dark background */
+        .leaflet-popup-content-wrapper { 
+            background: #333 !important; /* Dark background */
         }
         
         /* Style the popup tip */
         .leaflet-popup-tip {
-            background: #333;
+            background: #333 !important;
         }
         
         .enable-transitions {
