--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@ Have fun :)
         </ul>
     </div>
     <div class="lilPadding">
+        <h1> My Map of Interesting Places</h1>
         <div id="mapid" style="width: 600px; height: 400px;"></div>
         <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
