--- a/index.html
+++ b/index.html
@@ -462,6 +462,12 @@ Have fun :)
                 (worked at OpenAI, Tesla AI, etc.)
             </li>
         </ul>
+        <h3> Security + Hacker Culture </h3>
+        <ul>
+            <li><a href="https://darknetdiaries.com/transcript/45/"> EP 45: XBOX UNDERGROUND (PART 1) </a></li>
+            <li><a href="https://youtu.be/OAI8S2houW4"> DEFCON 18: Pwned By The Owner: What Happens When You Steal a Hackers Computer</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Hackers_(film)"> Hackers (film)</a></li>
+        </ul>
         <h2> Favorite Books/Essays/Articles </h2>
         <ul>
             <li><a href="https://en.wikipedia.org/wiki/Snow_Crash"> Snow Crash </a></li>
