--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ Have fun :)
         .resourcesContainer {
             justify-content: space-around;
             display: flex;
+            padding: 0.5em;
         }
 
         
