--- a/index.html
+++ b/index.html
@@ -427,7 +427,6 @@ Have fun :)
 </div>
 
 <div class="resourcesContainer">
-
     <div>
         <h2> Favorite tools </h2>
         <h3> Browsers</h3>
@@ -462,6 +461,7 @@ Have fun :)
                 Karpathy
                 (worked at OpenAI, Tesla AI, etc.)
             </li>
+            <li><a href="https://www.buzzfeednews.com/article/tedchiang/the-real-danger-to-civilization-isnt-ai-its-runaway#.vp1ylDRDR">Silicon Valley Is Turning Into Its Own Worst Fear</a></li>
         </ul>
         <h3> Security + Hacker Culture </h3>
         <ul>
