add weekly gym tracker frontend

--- a/index.html
+++ b/index.html
@@ -331,24 +331,59 @@ Have fun :)
                     <li> This website!</li>
                 </ul>
             </div>
-            <div class="lilPadding">
-                <fieldset>
+         <div class="lilPadding" style="
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-around;">
+               <fieldset>
                     <legend>2024 Goal List</legend>
                     <div>
-                        <span>&#x2B1C;</span> <!-- Checked emoji -->
+                        <span>⬜</span> <!-- Checked emoji -->
                         <label>Make a dollar on the internet</label>
                     </div>
                     <div>
-                        <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                        <span>⬜</span> <!-- Unchecked emoji -->
                         <label>Start a magazine for my friends</label>
                     </div>
                     <div>
-                        <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                        <span>⬜</span> <!-- Unchecked emoji -->
                         <label>Write one blog post a month</label>
                     </div>
                     <div>
-                        <span>&#x2B1C;</span> <!-- Unchecked emoji -->
+                        <span>⬜</span> <!-- Unchecked emoji -->
                         <label>Go snowboarding 5 times🤙</label>
+                    </div>
+               </fieldset>
+     
+                <fieldset>
+                    <legend>Weekly gym tracker</legend>
+                    <div>
+                        <span>⬜</span> 
+                        <label>Monday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span> 
+                        <label>Tuesday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span> 
+                        <label>Wednesday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span> 
+                        <label>Thursday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span> 
+                        <label>Friday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span>
+                        <label>Saturday</label>
+                    </div>
+                    <div>
+                        <span>⬜</span>
+                        <label>Sunday</label>
                     </div>
                 </fieldset>
             </div>
