--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ Have fun :)
             </div>
          <div class="lilPadding" style="
             display: flex;
-            flex-direction: column-reverse;
+            flex-direction: column;
             justify-content: space-around;">
                <fieldset>
                     <legend>2024 Goal List</legend>
