--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ Have fun :)
                         <label>Write one blog post a month</label>
                     </div>
                     <div>
-                        <span>✔️</span> <!-- Unchecked emoji -->
+                        <span>✅</span> <!-- Unchecked emoji -->
                         <label>Go snowboarding 5 times🤙</label>
                     </div>
                </fieldset>
