--- a/index.html
+++ b/index.html
@@ -330,7 +330,17 @@ Have fun :)
                 <ul>
                     <li> This website!</li>
                 </ul>
-            </div>
+            <h2>Things I want</h2>
+            <p> If you have these get in touch :)</p>
+            <ul>
+                <li>
+                    Facebook's Red Book
+                </li>
+                <li>
+                    Grace hopper's nanosecond
+                </li>
+            </ul>
+        </div>
          <div class="lilPadding" style="
             display: flex;
             flex-direction: column;
