add truthy darkmode operator so if darkmode is not set, default to it instead of lightmode.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Have fun :)
         // Immediately set the initial theme to reduce white flash
         (function () {
             const darkMode = localStorage.getItem('darkMode') === 'true';
-            const className = darkMode ? 'darkMode' : 'lightMode';
+            const className = (darkMode ?? true) ? 'darkMode' : 'lightMode';
             document.documentElement.classList.add(className);
         })();
     </script>
