--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ Have fun :)
     <script>
         // Immediately set the initial theme to reduce white flash
         (function () {
-            const darkMode = localStorage.getItem('darkMode') === 'true';
-            const className = (darkMode ?? true) ? 'darkMode' : 'lightMode';
+            const darkMode = localStorage.getItem('darkMode');
+            const className = (darkMode === null) ? 'darkMode' : (darkMode === 'true' ? 'darkMode' : 'lightMode');
             document.documentElement.classList.add(className);
         })();
     </script>
