add effective java

--- a/index.html
+++ b/index.html
@@ -474,7 +474,6 @@ Have fun :)
         </p>
         <ul>
             <li><a href="https://vim-adventures.com/"> Vim Adventures </a></li>
-            <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
         </ul>
     </div>
     <div>
@@ -495,7 +494,9 @@ Have fun :)
         </ul>
         <h3> Programming Languages </h3>
         <ul>
+            <li><a href="https://www.amazon.com/Effective-Java-Joshua-Bloch/dp/0134685997"> Effective Java (the best intermediate Java book I've found.)</a></li>
             <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
+            <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
         </ul>
     </div>
     <div>
