--- a/index.html
+++ b/index.html
@@ -402,6 +402,7 @@ Have fun :)
             <li><a href="https://stackoverflow.com/questions/130794/what-is-dependency-injection">Stack Overflow: What is dependency injection?</a></li>
             <li><a href="https://youtu.be/dVDkmJuEdDo">Anthony Bourdain, Leadership Lessons From the Kitchen, 2006</a></li>
             <li><a href="https://datatracker.ietf.org/doc/html/rfc2549">IP over Avian Carriers with Quality of Service</a></li>
+            <li><a href="https://medium.com/@philipsu/goodbye-microsoft-hello-facebook-94a189d56830">Goodbye Microsoft, Hello Facebook!</a></li>
         </ul>
     </div>
     <div class="lilPadding">
