add neal stephenson

--- a/index.html
+++ b/index.html
@@ -490,6 +490,7 @@ Have fun :)
         </ul>
         <h3> Security + Hacker Culture </h3>
         <ul>
+            <li><a href="https://web.stanford.edu/class/cs81n/command.txt"> In the Beginning was the Command Line</a></li>
             <li><a href="https://darknetdiaries.com/transcript/45/"> EP 45: XBOX UNDERGROUND (PART 1) </a></li>
             <li><a href="https://youtu.be/OAI8S2houW4"> DEFCON 18: Pwned By The Owner: What Happens When You Steal a Hackers Computer</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Hackers_(film)"> Hackers (film)</a></li>
