--- a/index.html
+++ b/index.html
@@ -403,6 +403,7 @@ Have fun :)
             <li><a href="https://youtu.be/dVDkmJuEdDo">Anthony Bourdain, Leadership Lessons From the Kitchen, 2006</a></li>
             <li><a href="https://datatracker.ietf.org/doc/html/rfc2549">IP over Avian Carriers with Quality of Service</a></li>
             <li><a href="https://medium.com/@philipsu/goodbye-microsoft-hello-facebook-94a189d56830">Goodbye Microsoft, Hello Facebook!</a></li>
+            <li><a href="https://www.astralcodexten.com/p/every-bay-area-house-party">Every Bay Area House Party</a></li>
         </ul>
     </div>
     <div class="lilPadding">
