--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ Have fun :)
             <li><a href="https://www.amazon.com/Effective-Java-Joshua-Bloch/dp/0134685997"> Effective Java (the best intermediate Java book I've found.)</a></li>
             <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
             <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
+            <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic Programming Facts </a></li>
         </ul>
     </div>
     <div>
