update where I live dawg

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Have fun :)
          alt="My sexy profile photo">
     <div class="lilPadding">
         <div>
-            <p> Just a simple software engineer in San Francisco. </p>
+            <p> Just a simple software engineer in New York City. </p>
             <p> I've worked on <a href="https://www.linkedin.com/in/chrisby/">Linkedin's</a> infra, Amazon Alexa, and SIG on
                 tools for sysadmins/doing devopsy sysadminny stuff.</p>
             <p> I'm interested in software engineering, computer science, economnics, art and really anything else you might
