--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ Have fun :)
             color: whitesmoke;
         }
 
+        :is(h1, h2, h3, h4, h5, h6) {
+            font-family: 'Krungthep, Montserrat';
+        }
+
         .lilPadding {
             padding: .5em
         }
