--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Have fun :)
         }
 
         :is(h1, h2, h3, h4, h5, h6) {
-            font-family: 'Krungthep, Montserrat';
+            font-family: 'Krungthep', 'Montserrat';
         }
 
         .lilPadding {
