--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@ Have fun :)
             <li><a href="https://darknetdiaries.com/transcript/45/"> EP 45: XBOX UNDERGROUND (PART 1) </a></li>
             <li><a href="https://youtu.be/OAI8S2houW4"> DEFCON 18: Pwned By The Owner: What Happens When You Steal a Hackers Computer</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Hackers_(film)"> Hackers (film)</a></li>
+            <li><a href="https://ipv4.games/"> IPv4 Turf War</a></li>
         </ul>
         <h3> Programming Languages </h3>
         <ul>
