--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ Have fun :)
             color: whitesmoke;
         }
 
-        :is(h1, h2, h3, h4, h5, h6) {
+        :is(h1, h2, h3, h4, h5, h6, legend) {
             font-family: 'Krungthep', 'Montserrat';
         }
 
