--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ Have fun :)
             <li><a href="https://youtu.be/OAI8S2houW4"> DEFCON 18: Pwned By The Owner: What Happens When You Steal a Hackers Computer</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Hackers_(film)"> Hackers (film)</a></li>
             <li><a href="https://ipv4.games/"> IPv4 Turf War</a></li>
+            <li><a href="http://catb.org/jargon/html/"> The Jargon File (A little **edgy**) </a></li>
         </ul>
         <h3> Programming Languages </h3>
         <ul>
