--- a/index.html
+++ b/index.html
@@ -344,6 +344,11 @@ Have fun :)
                     Grace hopper's nanosecond
                 </li>
             </ul>
+            <h2>Things I'm Reading</h2>
+            <ul>
+                <li> Titan by Ron Chernow </li>
+                <li> DDIA </li>
+            </ul>
         </div>
          <div class="lilPadding" style="
             display: flex;
