--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@ Have fun :)
             <div class="lilPadding">
                 <h2>Things I've built</h2>
                 <ul>
-                    <li> This website!</li>
+                    <li><a href="https://github.com/ChristianBako/christianbako.github.io">This website!</a></li>
                 </ul>
             <h2>Things I want</h2>
             <p> If you have these get in touch :)</p>
