--- a/index.html
+++ b/index.html
@@ -371,6 +371,8 @@ Have fun :)
                 </fieldset>
             </div>
         </div>
+        <div>
+        </div>
     </div>
 </div>
 <div class="somethingCoolContainer">
