--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@ Have fun :)
     </div>
     <div>
         <h2> Lectures and courses </h2>
-        <h3> AI </h3>
+        <h3> Academic CS Stuff (algorithms, AI, Math, etc.)</h3>
         <ul>
             <li><a href="https://www.youtube.com/watch?v=zjkBMFhNj_g"> Intro to Large Language Models </a> by Andrej
                 Karpathy
@@ -496,12 +496,13 @@ Have fun :)
             <li><a href="https://ipv4.games/"> IPv4 Turf War</a></li>
             <li><a href="http://catb.org/jargon/html/"> The Jargon File (A little **edgy**) </a></li>
         </ul>
-        <h3> Programming Languages </h3>
+        <h3> Software Engineering </h3>
         <ul>
             <li><a href="https://www.amazon.com/Effective-Java-Joshua-Bloch/dp/0134685997"> Effective Java (the best intermediate Java book I've found.)</a></li>
             <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
             <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
             <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic Programming Facts </a></li>
+            <li><a href="https://sre.google/sre-book/">Google SRE Book </a></li>
         </ul>
     </div>
     <div>
