--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@ Have fun :)
             <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
             <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic Programming Facts </a></li>
             <li><a href="https://sre.google/sre-book/">Google SRE Book </a></li>
+            <li><a href="https://ludic.mataroa.blog/blog/i-will-fucking-piledrive-you-if-you-mention-ai-again/">I Will Fucking Piledrive You If You Mention AI Again</li>
         </ul>
     </div>
     <div>
