--- a/index.html
+++ b/index.html
@@ -329,6 +329,9 @@ Have fun :)
                 <li>
                     Grace hopper's nanosecond
                 </li>
+                <li>
+                    Old school Bell Systems merch
+                </li>
             </ul>
             <h2>Things I'm Reading</h2>
             <ul>
