--- a/index.html
+++ b/index.html
@@ -457,6 +457,11 @@ Have fun :)
 <div class="resourcesContainer">
     <div>
         <h2> Favorite tools </h2>
+        <h3> Programming Resources </h3>
+        <p> Learn programming, build cool shit </p>
+        <ul>
+            <li><a href="https://learnxinyminutes.com/">Learn X in Y minutes</a> for scenic programming tours</li>
+        </ul>
         <h3> Browsers</h3>
         <p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
         <ul>
