--- a/index.html
+++ b/index.html
@@ -503,7 +503,8 @@ Have fun :)
             <li><a href="https://en.wikipedia.org/wiki/Hackers_(film)"> Hackers (film)</a></li>
             <li><a href="https://ipv4.games/"> IPv4 Turf War</a></li>
             <li><a href="http://catb.org/jargon/html/"> The Jargon File (A little **edgy**) </a></li>
-            <li><a href="https://www.youtube.com/watch?v=tc4ROCJYbm0"> The Unix Operating System (1982)</a> Bell Labs explainer about unix from the time.</li>
+            <li><a href="https://www.youtube.com/watch?v=tc4ROCJYbm0"> The Unix Operating System (1982)</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Corrupted_Blood_incident">The Corrupted Blood Incident (2005)</a>/li>
         </ul>
         <h3> Software Engineering </h3>
         <ul>
@@ -526,8 +527,8 @@ Have fun :)
         </ul>
         <h3> Design </h3>
         <ul>
-            <li><a href="https://www.youtube.com/watch?v=xKu2de0yCJI">Saul Bass Pitch Video for Bell System Logo Redesign</a> is a great explainer on what goes into a good branding effort</li>
-            <li><a href="https://www.paulrand.design/work/NeXT-Computers.html">NeXT Computers Branding</a> by Paul Rand./li>
+            <li><a href="https://www.youtube.com/watch?v=xKu2de0yCJI">Saul Bass Pitch Video for Bell System Logo Redesign</a> 
+            <li><a href="https://www.paulrand.design/work/NeXT-Computers.html">NeXT Computers Branding</a> by Paul Rand.</li>
         </ul>
         <h3>Economics/Investing</h3>
         <h4>Beginner friendly resources</h4>
