--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@ Have fun :)
             <li><a href="https://learnxinyminutes.com/">Learn X in Y minutes</a> for scenic programming tours</li>
         </ul>
         <h3> Browsers</h3>
-        <p> There are a bunch of interesting browser projects recently. More interesting than Chrome or Firefox. :)</p>
+        <p> There are a bunch of interesting browser projects recently. <br /> More interesting than Chrome or Firefox. :)</p>
         <ul>
             <li><a href="https://arc.net/">Arc Browser</a> is the one I currently use.</li>
             <li><a href="https://github.com/bonsai-desk/bonsai-browser">Bonsai Browser </a> really enjoyed this project
@@ -504,7 +504,7 @@ Have fun :)
             <li><a href="https://ipv4.games/"> IPv4 Turf War</a></li>
             <li><a href="http://catb.org/jargon/html/"> The Jargon File (A little **edgy**) </a></li>
             <li><a href="https://www.youtube.com/watch?v=tc4ROCJYbm0"> The Unix Operating System (1982)</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Corrupted_Blood_incident">The Corrupted Blood Incident (2005)</a>/li>
+            <li><a href="https://en.wikipedia.org/wiki/Corrupted_Blood_incident">The Corrupted Blood Incident (2005)</a></li>
         </ul>
         <h3> Software Engineering </h3>
         <ul>
