--- a/index.html
+++ b/index.html
@@ -471,11 +471,12 @@ Have fun :)
                 got killed off.
             </li>
         </ul>
-        <h3> Notetaking </h3>
+        <h3> Text Manipulation </h3>
         <ul>
             <li><a href="https://obsidian.md/"> Obsidian </a></li>
+            <li><a href="https://berkeleygraphics.com/typefaces/berkeley-mono/"> Berkley Mono typeface</a></li>
         </ul>
-        <h3>Vim Resources</h3>
+        <h4> Vim </h4>
         <p>
             I've vimified like 90% of my workflows. Worth learning just for the fun of it, but it does have a high
             learning
