--- a/index.html
+++ b/index.html
@@ -494,7 +494,8 @@ Have fun :)
                 Karpathy
                 (worked at OpenAI, Tesla AI, etc.)
             </li>
-            <li><a href="https://www.buzzfeednews.com/article/tedchiang/the-real-danger-to-civilization-isnt-ai-its-runaway#.vp1ylDRDR">Silicon Valley Is Turning Into Its Own Worst Fear</a></li>
+            <li><a href="https://www.buzzfeednews.com/article/tedchiang/the-real-danger-to-civilization-isnt-ai-its-runaway#.vp1ylDRDR"> Silicon Valley Is Turning Into Its Own Worst Fear </a></li>
+            <li><a href="https://www.mathacademy.com/" >Math Academy, easily the best way to learn math outside of school </a></li>
         </ul>
         <h3> Hacker Culture </h3>
         <ul>
