--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Have fun :)
                     Facebook's Red Book
                 </li>
                 <li>
-                    Grace hopper's nanosecond
+                    <a href="https://youtu.be/9eyFDBPk4Yw"> Grace hopper's nanosecond </a>
                 </li>
                 <li>
                     Old school Bell Systems merch
