--- a/index.html
+++ b/index.html
@@ -550,5 +550,13 @@ Have fun :)
                 Writes</a></li>
         </ul>
     </div>
+    <div class="resourcesContainer">
+        <div>
+            <h2> Indie websites</h2>
+            <ul>
+                <li><a href="https://groundhog-day.com/>groundhog-day.com</a> has fun facts about weather pridicting groundhogs.</li>
+            </ul>
+        </div>
+    </div>
 </div>
 </body>
