--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@ Have fun :)
             padding: 0.5em;
         }
 
+        .resourcesContainer > * {
+            padding: 0.3em;
+        }
         
         .somethingCoolContainer {
             justify-content: space-around;
@@ -550,13 +553,13 @@ Have fun :)
                 Writes</a></li>
         </ul>
     </div>
-    <div class="resourcesContainer">
-        <div>
-            <h2> Indie websites</h2>
+</div>
+<div class="resourcesContainer">
+    <div>
+        <h2> Indie websites</h2>
             <ul>
-                <li><a href="https://groundhog-day.com/>groundhog-day.com</a> has fun facts about weather pridicting groundhogs.</li>
+                <li><a href="https://groundhog-day.com/">groundhog-day.com /a> has fun facts about weather pridicting groundhogs.</li>
             </ul>
         </div>
     </div>
-</div>
 </body>
