--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@ Have fun :)
     <div>
         <h2> Indie websites</h2>
             <ul>
-                <li><a href="https://groundhog-day.com/">groundhog-day.com /a> has fun facts about weather pridicting groundhogs.</li>
+                <li><a href="https://groundhog-day.com/">groundhog-day.com </a> has fun facts about weather pridicting groundhogs.</li>
             </ul>
         </div>
     </div>
