--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ Have fun :)
         <h2> Indie websites</h2>
             <ul>
                 <li><a href="https://groundhog-day.com/">groundhog-day.com </a> has fun facts about weather pridicting groundhogs.</li>
+                <li><a href="https://walzr.com/bop-spotter">Bopspotter </a> is a phone taped to a pole at 24th and Mission running Shazam</li>
             </ul>
         </div>
     </div>
