--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@ Have fun :)
             <ul>
                 <li><a href="https://groundhog-day.com/">groundhog-day.com </a> has fun facts about weather pridicting groundhogs.</li>
                 <li><a href="https://walzr.com/bop-spotter">Bopspotter </a> is a phone taped to a pole at 24th and Mission running Shazam</li>
+                <li>One day I hope to be <a href="https://goodenough.us/">Good Enough</a></li>
             </ul>
         </div>
     </div>
