--- a/index.html
+++ b/index.html
@@ -540,17 +540,13 @@ Have fun :)
         <h3>Economics/Investing</h3>
         <h4>Beginner friendly resources</h4>
         <ul>
-            <li><a href="https://youtu.be/PHe0bXAIuk0?si=WhWumT5rT-cyJQIS"> Ray Dalio's explaination of how the economy
-                works</a></li>
+            <li><a href="https://youtu.be/PHe0bXAIuk0?si=WhWumT5rT-cyJQIS"> Ray Dalio's explaination of how the economyworks</a></li>
             <li><a href="https://youtu.be/rf_f8GV0yYM?si=Gl83VsiicAwXSZAP"> Peter Lynch lecture on investing</a></li>
-            <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his
-                valuing
-                things from scratch series is pretty good too.
-            </li>
+            <li><a href="https://youtu.be/VI_riscmviI?si=fYfzNocF7lYJHOTE"> Intor to finance by Martin Shkreli</a> his valuing things from scratch series is pretty good too.</li>
             <li><a href="https://a.co/d/hJGRXZj"> Market Wizards + Unknown Market Wizards </a></li>
             <li><a href="https://www.bitsaboutmoney.com/"> Bits about money </a></li>
-            <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine
-                Writes</a></li>
+            <li><a href="https://www.bloomberg.com/opinion/authors/ARbTQlRLRjE/matthew-s-levine">Everything Matt Levine Writes</a></li>
+            <li><a href="https://novelinvestor.com/stan-druckenmillers-worst-mistake-ever/">Stan Druckenmiller's Worst Mistake Ever</a></li>
         </ul>
     </div>
 </div>
