--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ Have fun :)
             <p> If you have these get in touch :)</p>
             <ul>
                 <li>
-                    Facebook's Red Book
+                    <a href="https://www.map.cv/blog/redbook"> Facebook's Red Book </a>
                 </li>
                 <li>
                     <a href="https://youtu.be/9eyFDBPk4Yw"> Grace hopper's nanosecond </a>
