--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ Have fun :)
             <li><a href="https://www.amazon.com/Effective-Java-Joshua-Bloch/dp/0134685997"> Effective Java (the best intermediate Java book I've found.)</a></li>
             <li><a href="https://brandonspark.github.io/150/"> functional programming course from CMU </a></li>
             <li><a href="https://teachyourselfcs.com/"> Self taught CS resources. Read these books. </a></li>
-            <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic </a> <a href="https://noyaml.com/"> Programming Facts </a></li>
+            <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic </a> <a href="https://noyaml.com/"> Programming </a> <a href="https://secretgeek.github.io/html_wysiwyg/html.html"> Facts </a></li>
             <li><a href="https://sre.google/sre-book/">Google SRE Book </a></li>
             <li><a href="https://ludic.mataroa.blog/blog/i-will-fucking-piledrive-you-if-you-mention-ai-again/">I Will Fucking Piledrive You If You Mention AI Again</li>
         </ul>
