--- a/index.html
+++ b/index.html
@@ -557,6 +557,7 @@ Have fun :)
                 <li><a href="https://groundhog-day.com/">groundhog-day.com </a> has fun facts about weather pridicting groundhogs.</li>
                 <li><a href="https://walzr.com/bop-spotter">Bopspotter </a> is a phone taped to a pole at 24th and Mission running Shazam. Check out his other stuff too!</li>
                 <li>One day I hope to be <a href="https://goodenough.us/">Good Enough</a></li>
+                <li><a href="https://ciechanow.ski/">Bartosz's</a> visualizations are incredible!</li>
             </ul>
         </div>
     </div>
