--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Have fun :)
                 be interested in.</p>
             <p> hmu on <a href="https://twitter.com/BakoTac0">twitter/X</a> if you wanna chat! If you're excited about
                 something, or know a lot no matter how niche I'd love to hear it.</p>
-            <p> I do photography, ride motorcycles, play games, shred, and read too much in my spare time. </p>
+            <p> I do photography, ride motorcycles, play video games, snowboard, and read too much in my spare time. </p>
         </div>
         <div class="creationsContainer">
             <div class="lilPadding">
@@ -347,7 +347,7 @@ Have fun :)
             flex-direction: column;
             justify-content: space-around;">
                <fieldset>
-                    <legend>2024 Goal List</legend>
+                    <legend>2025 Goal List</legend>
                     <div>
                         <span>⬜</span> <!-- Checked emoji -->
                         <label>Make a dollar on the internet</label>
@@ -361,7 +361,7 @@ Have fun :)
                         <label>Write one blog post a month</label>
                     </div>
                     <div>
-                        <span>✅</span> <!-- Unchecked emoji -->
+                        <span>⬜</span> <!-- Unchecked emoji -->
                         <label>Go snowboarding 5 times🤙</label>
                     </div>
                </fieldset>
