--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Have fun :)
         flex-direction: row;
         align-items: center;">
         <h1>
-            Hi! I'm Chris
+            Hi! I'm Chris Bakopoulos
         </h1>
                     
         <div class="bonfire">
