--- a/index.html
+++ b/index.html
@@ -464,6 +464,7 @@ Have fun :)
         <p> Learn programming, build cool shit </p>
         <ul>
             <li><a href="https://learnxinyminutes.com/">Learn X in Y minutes</a> for scenic programming tours</li>
+            <li><a href="https://beej.us/guide/">Beej's Guides</a> learn the basics of dealing with Networking/Operating Systems/Git</li>
         </ul>
         <h3> Browsers</h3>
         <p> There are a bunch of interesting browser projects recently. <br /> More interesting than Chrome or Firefox. :)</p>
