--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ Have fun :)
                 <li><a href="https://walzr.com/bop-spotter">Bopspotter </a> is a phone taped to a pole at 24th and Mission running Shazam. Check out his other stuff too!</li>
                 <li>One day I hope to be <a href="https://goodenough.us/">Good Enough</a></li>
                 <li><a href="https://ciechanow.ski/">Bartosz's</a> visualizations are incredible!</li>
+                <li><a href="https://walkkumano.com/koyabound/">Koya Bound</a> for the beautiful mapping and typography</li>
             </ul>
         </div>
     </div>
