--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@ Have fun :)
                 <li>One day I hope to be <a href="https://goodenough.us/">Good Enough</a></li>
                 <li><a href="https://ciechanow.ski/">Bartosz's</a> visualizations are incredible!</li>
                 <li><a href="https://walkkumano.com/koyabound/">Koya Bound</a> for the beautiful mapping and typography</li>
+                <li><a href="https://subwaystories.nyc/">Subway Stories NYC</a></li>
             </ul>
         </div>
     </div>
