--- a/index.html
+++ b/index.html
@@ -511,6 +511,7 @@ Have fun :)
             <li><a href="http://catb.org/jargon/html/"> The Jargon File (A little **edgy**) </a></li>
             <li><a href="https://www.youtube.com/watch?v=tc4ROCJYbm0"> The Unix Operating System (1982)</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Corrupted_Blood_incident">The Corrupted Blood Incident (2005)</a></li>
+            <li><a href="https://37signals.com/00">37Signals</a></li>
         </ul>
         <h3> Software Engineering </h3>
         <ul>
@@ -538,6 +539,7 @@ Have fun :)
         <ul>
             <li><a href="https://www.youtube.com/watch?v=xKu2de0yCJI">Saul Bass Pitch Video for Bell System Logo Redesign</a> 
             <li><a href="https://www.paulrand.design/work/NeXT-Computers.html">NeXT Computers Branding</a> by Paul Rand.</li>
+            <li><a href="https://lawsofux.com/"> Laws of UX </a></li>
         </ul>
         <h3>Economics/Investing</h3>
         <h4>Beginner friendly resources</h4>
