--- a/index.html
+++ b/index.html
@@ -338,7 +338,6 @@ Have fun :)
             </ul>
             <h2>Things I'm Reading</h2>
             <ul>
-                <li> Titan by Ron Chernow </li>
                 <li> DDIA </li>
             </ul>
         </div>
@@ -540,6 +539,7 @@ Have fun :)
             <li><a href="https://www.youtube.com/watch?v=xKu2de0yCJI">Saul Bass Pitch Video for Bell System Logo Redesign</a> 
             <li><a href="https://www.paulrand.design/work/NeXT-Computers.html">NeXT Computers Branding</a> by Paul Rand.</li>
             <li><a href="https://lawsofux.com/"> Laws of UX </a></li>
+            <li><a href="https://mobbin.com/">Mobbin</a> has UI/UX from every app out there so you can see what they're doing.</li>
         </ul>
         <h3>Economics/Investing</h3>
         <h4>Beginner friendly resources</h4>
