--- a/index.html
+++ b/index.html
@@ -565,6 +565,10 @@ Have fun :)
                 <li><a href="https://walkkumano.com/koyabound/">Koya Bound</a> for the beautiful mapping and typography</li>
                 <li><a href="https://subwaystories.nyc/">Subway Stories NYC</a></li>
             </ul>
+        <h2> Art </h2>
+        <ul>
+            <li><a href="https://www.nytimes.com/interactive/2021/arts/close-read.html">New York Times' Close Read Series</a></li>
+        </ul>
         </div>
     </div>
 </body>
