--- a/index.html
+++ b/index.html
@@ -520,6 +520,7 @@ Have fun :)
             <li><a href="https://docs.oracle.com/javase/8/docs/api/java/net/URL.html#equals-java.lang.Object-"> Chaotic </a> <a href="https://noyaml.com/"> Programming </a> <a href="https://secretgeek.github.io/html_wysiwyg/html.html"> Facts </a></li>
             <li><a href="https://sre.google/sre-book/">Google SRE Book </a></li>
             <li><a href="https://ludic.mataroa.blog/blog/i-will-fucking-piledrive-you-if-you-mention-ai-again/">I Will Fucking Piledrive You If You Mention AI Again</li>
+            <li><a href="https://www.redblobgames.com/">Red Blob Games</a> is a mid level algo resource</li>
         </ul>
     </div>
     <div>
